--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="add_note">Add note</string>
     <string name="note_title">Note title</string>
     <string name="note_content">Note content</string>
+    <string name="save">Save</string>
 </resources>
