Share note with intent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="note_title">Note title</string>
     <string name="note_content">Note content</string>
     <string name="save">Save</string>
+    <string name="delete">Delete</string>
+    <string name="share">Share</string>
 </resources>
