--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="save">Save</string>
     <string name="notes">Notes</string>
+    <string name="search">Search</string>
 </resources>
