--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="add_widget">Add widget</string>
     <string name="notes">Notes</string>
     <string name="empty_add_notes">Empty, Add notes</string>
+    <string name="search">Search</string>
 </resources>
