Add menu entries and icons for sorting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="notes">Notes</string>
     <string name="empty_add_notes">Empty, Add notes</string>
     <string name="search">Search</string>
+    <string name="sort">Sort</string>
+    <string name="sort_by_title">Sort by title</string>
+    <string name="sort_by_created_time">Sort by created time</string>
+    <string name="sort_by_modified_time">Sort by modified time</string>
+    <string name="use_default">Use default sorting</string>
 </resources>
