--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -3,4 +3,9 @@
     <string name="save">Save</string>
     <string name="notes">Notes</string>
     <string name="search">Search</string>
+    <string name="sort">Sort</string>
+    <string name="sort_by_title">Sort by title</string>
+    <string name="sort_by_created_time">Sort by created time</string>
+    <string name="sort_by_modified_time">Sort by modified time</string>
+    <string name="use_default">Use default sorting</string>
 </resources>
