Add menu entry for layout toggle

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -7,4 +7,6 @@
     <string name="sort_by_title">Sort by title</string>
     <string name="sort_by_created_time">Sort by created time</string>
     <string name="sort_by_modified_time">Sort by modified time</string>
+    <string name="list_style">List style</string>
+    <string name="grid_style">Grid style</string>
 </resources>
