--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -9,4 +9,8 @@
     <string name="sort_by_modified_time">Sort by modified time</string>
     <string name="list_style">List style</string>
     <string name="grid_style">Grid style</string>
+    <string name="delete_note">Delete note</string>
+    <string name="delete_confirmation">Are you sure you want to delete the note?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
