--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -13,4 +13,5 @@
     <string name="delete_confirmation">Are you sure you want to delete the note?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="settings">Settings</string>
 </resources>
