--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,8 @@
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="settings">Settings</string>
+    <string name="theme_key">theme</string>
+    <string name="system_default_theme">system_default</string>
+    <string name="light_theme">light_theme</string>
+    <string name="dark_theme">dark_theme</string>
 </resources>
