--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -14,4 +14,6 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="settings">Settings</string>
+    <string name="modified_time">Modified time:</string>
+    <string name="created_time">Created time:</string>
 </resources>
