Add translation for app texts

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -17,5 +17,5 @@
     <string name="modified_time">Modified time:</string>
     <string name="created_time">Created time:</string>
     <string name="added_notes_appear_here">Added notes appear here</string>
-    <string name="no_note_saved_note">No note saved note</string>
+    <string name="no_note_saved_note">No note saved</string>
 </resources>
