Create genenerate pdf menu item
Created a menu item in the note edit menu
to enable users to generate PDF.

Logic to generate PDF hasn't been created
yet.

I also addede translations for other languages
for the string "Gnenerate PDF".

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -36,4 +36,5 @@
     <string name="italic">Itálico</string>
     <string name="underline">Subrayar</string>
     <string name="strike_through">Tachado</string>
+    <string name="generate_pdf">Generar PDF</string>
 </resources>
