--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -36,4 +36,5 @@
     <string name="italic">Kursiv</string>
     <string name="underline">Unterstreichen</string>
     <string name="strike_through">Durchgestrichen</string>
+    <string name="generate_pdf">PDF generieren</string>
 </resources>
