--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -36,4 +36,5 @@
     <string name="italic">Italique</string>
     <string name="underline">Souligner</string>
     <string name="strike_through">Barré</string>
+    <string name="generate_pdf">Générer un PDF</string>
 </resources>
