--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -36,4 +36,5 @@
     <string name="italic">斜体</string>
     <string name="underline">强调</string>
     <string name="strike_through">删除线</string>
+    <string name="generate_pdf">产生PDF</string>
 </resources>
