--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="italic">Italic</string>
     <string name="underline">Underline</string>
     <string name="strike_through">Strike through</string>
+    <string name="generate_pdf">Generate PDF</string>
 </resources>
