--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -37,4 +37,6 @@
     <string name="underline">Unterstreichen</string>
     <string name="strike_through">Durchgestrichen</string>
     <string name="generate_pdf">PDF generieren</string>
+    <string name="pdf_generated">PDF generiert</string>
+    <string name="pdf_successfull">PDF erfolgreich erstellt, klicken Sie, um die Datei anzuzeigen.</string>
 </resources>
