--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -37,6 +37,5 @@
     <string name="underline">强调</string>
     <string name="strike_through">删除线</string>
     <string name="generate_pdf">产生PDF</string>
-    <string name="pdf_generated">生成PDF</string>
-    <string name="pdf_successfull">PDF已成功创建，单击以查看文件。</string>
+    <string name="pdf_successfull">PDF已成功创建</string>
 </resources>
