Update note edit placeholder texts

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -27,8 +27,8 @@
     <string name="share">Aktie</string>
     <string name="delete">Löschen</string>
     <string name="save">speichern</string>
-    <string name="note_content">Inhalt beachten</string>
-    <string name="note_title">Titel notieren</string>
+    <string name="note_content">Geben Sie hier den Inhalt der Notiz ein</string>
+    <string name="note_title">Titel</string>
     <string name="add_note">Notiz hinzufügen</string>
     <string name="note_updated_msg">Hinweis aktualisiert</string>
     <string name="note_saved_msg">Notiz gespeichert</string>
