--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -27,8 +27,8 @@
     <string name="share">分享</string>
     <string name="delete">删除</string>
     <string name="save">救</string>
-    <string name="note_content">备注内容</string>
-    <string name="note_title">笔记标题</string>
+    <string name="note_content">在此处输入注释内容</string>
+    <string name="note_title">标题简化</string>
     <string name="add_note">加注</string>
     <string name="note_updated_msg">笔记已更新</string>
     <string name="note_saved_msg">笔记已保存</string>
